[gd_scene load_steps=29 format=2]

[ext_resource path="res://Weather.gd" type="Script" id=1]
[ext_resource path="res://Textures/BG_old/drop.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Tilemaps/BGTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Instances/NPC.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/People/ponytail_head.png" type="Texture" id=5]
[ext_resource path="res://Textures/People/blank_body.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Instances/Interactable.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Textures/People/bowtieglasses_head.png" type="Texture" id=9]
[ext_resource path="res://Textures/People/bowtieglasses_body.png" type="Texture" id=10]
[ext_resource path="res://Textures/People/bowtieglasses_hand.png" type="Texture" id=11]
[ext_resource path="res://Textures/UI/cursor.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Cursor.gd" type="Script" id=13]
[ext_resource path="res://Textures/UI/cursor02.png" type="Texture" id=14]
[ext_resource path="res://Textures/UI/cursor03.png" type="Texture" id=15]
[ext_resource path="res://Scripts/DialogueHandler.gd" type="Script" id=16]
[ext_resource path="res://Textures/UI/UIbox.png" type="Texture" id=17]
[ext_resource path="res://Font/arial.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=19]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 1400, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape" ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 70.0
height = 150.0

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -26.2891 ), Vector2( 0, 0 ), Vector2( 0, -26.2891 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -160 ), Vector2( 0, -110 ), Vector2( 0, -140 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -26.2891 ), Vector2( 0, -10 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -140.723 ), Vector2( 0, -110 ), Vector2( 0, -160 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HeadSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -150 ), Vector2( 0, -140 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -20 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 100, 100 )

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.24, 0.29, 0.34, 0.39, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.44, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=8]

size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 18 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=9]

resource_name = "ShowInvent"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 1000 ), Vector2( 20, 20 ) ]
}

[node name="Main" type="Node2D" index="0"]

[node name="Weather" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RainParticles" type="Particles2D" parent="Weather" index="0"]

position = Vector2( 0, -800 )
emitting = false
amount = 300
lifetime = 30.0
one_shot = false
preprocess = 0.0
speed_scale = 10.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Transform" ]

[node name="BG" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 188, 188 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -655350, 536870924, 0, -655349, 536870915, 0, -655348, 536870915, 0, -655347, 536870915, 0, -655346, 536870924, 0, -655345, 536870915, 0, -655344, 536870915, 0, -655343, 536870915, 0, -655342, 536870915, 0, -655341, 536870915, 0, -655340, 536870924, 0, -655339, 3, 0, -655338, 3, 0, -655337, 3, 0, -655336, 3, 0, -655335, 3, 0, -655334, 3, 0, -655333, 3, 0, -655332, 3, 0, -655331, 3, 0, -655330, 3, 0, -655329, 3, 0, -655328, 12, 0, -655327, 3, 0, -589817, 536870915, 0, -589816, 536870915, 0, -589815, 536870915, 0, -589814, 536870924, 0, -589813, 536870915, 0, -589812, 536870925, 0, -589811, 536870915, 0, -589810, 536870924, 0, -589809, 536870915, 0, -589808, 536870925, 0, -589807, 536870915, 0, -589806, 536870925, 0, -589805, 536870915, 0, -589804, 536870924, 0, -589803, 3, 0, -589802, 8, 0, -589801, 3, 0, -589800, 8, 0, -589799, 3, 0, -589798, 8, 0, -589797, 3, 0, -589796, 8, 0, -589795, 3, 0, -589794, 8, 0, -589793, 3, 0, -589792, 12, 0, -589791, 3, 0, -458760, 536870915, 0, -458759, 536870915, 0, -458758, 536870915, 0, -458757, 536870915, 0, -458756, 536870915, 0, -458755, 536870915, 0, -458754, 536870924, 0, -458753, 536870915, 0, -524288, 536870915, 0, -524287, 536870915, 0, -524286, 536870915, 0, -524285, 536870915, 0, -524284, 536870924, 0, -524283, 536870915, 0, -524282, 536870915, 0, -524281, 536870915, 0, -524280, 536870915, 0, -524279, 536870915, 0, -524278, 536870924, 0, -524277, 536870915, 0, -524276, 536870915, 0, -524275, 536870915, 0, -524274, 536870924, 0, -524273, 536870915, 0, -524272, 536870915, 0, -524271, 6, 0, -524270, 3, 0, -524269, 6, 0, -524268, 536870924, 0, -524267, 3, 0, -524266, 3, 0, -524265, 3, 0, -524264, 3, 0, -524263, 3, 0, -524262, 3, 0, -524261, 3, 0, -524260, 3, 0, -524259, 3, 0, -524258, 3, 0, -524257, 3, 0, -524256, 12, 0, -524255, 3, 0, -393224, 536870915, 0, -393223, 536870915, 0, -393222, 536870915, 0, -393221, 536870915, 0, -393220, 536870915, 0, -393219, 536870915, 0, -393218, 536870924, 0, -393217, 536870915, 0, -458752, 536870915, 0, -458751, 536870925, 0, -458750, 536870915, 0, -458749, 536870915, 0, -458748, 536870924, 0, -458747, 536870915, 0, -458746, 536870915, 0, -458745, 536870925, 0, -458744, 536870915, 0, -458743, 536870915, 0, -458742, 536870924, 0, -458741, 536870915, 0, -458740, 536870925, 0, -458739, 536870915, 0, -458738, 536870924, 0, -458737, 536870915, 0, -458736, 536870915, 0, -458718, 0, 0, -458717, 0, 0, -458716, 0, 0, -458715, 0, 0, -458714, 0, 0, -458713, 0, 0, -458712, 0, 0, -458711, 0, 0, -458710, 0, 0, -458709, 0, 0, -458708, 0, 0, -458707, 0, 0, -458706, 0, 0, -458705, 0, 0, -327688, 536870915, 0, -327687, 536870915, 0, -327686, 536870915, 0, -327685, 536870915, 0, -327684, 536870915, 0, -327683, 536870915, 0, -327682, 536870924, 0, -327681, 536870915, 0, -393216, 536870915, 0, -393215, 536870915, 0, -393214, 536870915, 0, -393213, 536870915, 0, -393212, 536870924, 0, -393211, 536870915, 0, -393210, 536870915, 0, -393209, 536870915, 0, -393208, 536870915, 0, -393207, 536870915, 0, -393206, 536870924, 0, -393205, 536870915, 0, -393204, 536870915, 0, -393203, 536870915, 0, -393202, 536870924, 0, -393201, 536870915, 0, -393200, 536870915, 0, -393177, 0, 0, -262152, 536870915, 0, -262151, 536870915, 0, -262150, 536870915, 0, -262149, 536870915, 0, -262148, 536870915, 0, -262147, 536870915, 0, -262146, 536870924, 0, -262145, 536870915, 0, -327680, 536870915, 0, -327679, 536870925, 0, -327678, 536870915, 0, -327677, 536870915, 0, -327676, 536870924, 0, -327675, 536870915, 0, -327674, 536870915, 0, -327673, 536870925, 0, -327672, 536870915, 0, -327671, 536870915, 0, -327670, 536870924, 0, -327669, 536870915, 0, -327668, 536870915, 0, -327667, 536870915, 0, -327666, 536870924, 0, -327665, 536870915, 0, -327641, 0, 0, -196616, 536870915, 0, -196615, 7, 0, -196614, 536870915, 0, -196613, 8, 0, -196612, 536870915, 0, -196611, 536870915, 0, -196610, 536870924, 0, -196609, 536870915, 0, -262144, 536870915, 0, -262143, 536870915, 0, -262142, 536870915, 0, -262141, 536870915, 0, -262140, 536870924, 0, -262139, 536870915, 0, -262138, 536870915, 0, -262137, 536870915, 0, -262136, 536870915, 0, -262135, 536870915, 0, -131080, 536870915, 0, -131079, 536870915, 0, -131078, 536870915, 0, -131077, 536870915, 0, -131076, 536870915, 0, -131075, 536870915, 0, -131074, 536870924, 0, -131073, 536870915, 0, -196608, 536870915, 0, -196607, 536870922, 0, -196606, 536870915, 0, -196605, 536870915, 0, -196604, 536870924, 0, -196603, 536870915, 0, -196602, 536870915, 0, -196601, 536870915, 0, -196600, 536870915, 0, -196599, 536870915, 0, -65544, 536870915, 0, -65543, 536870915, 0, -65542, 536870915, 0, -65541, 3, 0, -65540, 3, 0, -65539, 536870915, 0, -65538, 536870924, 0, -65537, 536870915, 0, -131072, 536870915, 0, -131071, 536870921, 0, -131070, 536870915, 0, -131069, 536870915, 0, -131068, 536870924, 0, -131067, 536870915, 0, -131066, 536870915, 0, -131065, 536870915, 0, -131064, 536870915, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Curr" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 188, 188 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -786440, 536870912, 0, -786439, 536870912, 0, -786438, 536870912, 0, -786437, 536870912, 0, -786436, 536870912, 0, -786435, 536870912, 0, -786434, 536870912, 0, -786433, 536870912, 0, -851968, 536870912, 0, -851967, 536870912, 0, -851966, 536870912, 0, -851965, 536870912, 0, -851964, 536870912, 0, -851963, 536870912, 0, -851962, 536870912, 0, -851961, 536870912, 0, -851960, 536870912, 0, -851959, 536870912, 0, -851958, 536870912, 0, -851957, 536870912, 0, -851956, 536870912, 0, -851955, 536870912, 0, -851954, 536870912, 0, -851953, 536870912, 0, -851952, 536870912, 0, -851951, 536870912, 0, -851950, 536870912, 0, -851949, 536870912, 0, -851948, 536870912, 0, -851947, 536870912, 0, -851946, 536870912, 0, -851945, 536870912, 0, -851944, 536870912, 0, -851943, 536870912, 0, -851942, 536870912, 0, -851941, 536870912, 0, -851940, 536870912, 0, -851939, 536870912, 0, -851938, 536870912, 0, -851937, 536870912, 0, -851936, 536870912, 0, -851935, 536870912, 0, -720904, 536870912, 0, -720903, 536870912, 0, -720902, 536870912, 0, -720901, 536870912, 0, -720900, 536870912, 0, -720899, 536870912, 0, -720898, 536870912, 0, -720897, 536870912, 0, -786432, 536870912, 0, -786431, 536870912, 0, -786430, 536870912, 0, -786429, 536870912, 0, -786428, 536870912, 0, -786427, 536870912, 0, -786426, 536870912, 0, -786425, 536870912, 0, -786424, 536870912, 0, -786423, 536870912, 0, -786422, 536870912, 0, -786421, 536870912, 0, -786420, 536870912, 0, -786419, 536870912, 0, -786418, 536870912, 0, -786417, 536870912, 0, -786416, 536870912, 0, -786415, 536870912, 0, -786414, 536870912, 0, -786413, 536870912, 0, -786412, 536870912, 0, -786411, 536870912, 0, -786410, 536870912, 0, -786409, 536870912, 0, -786408, 536870912, 0, -786407, 536870912, 0, -786406, 536870912, 0, -786405, 536870912, 0, -786404, 536870912, 0, -786403, 536870912, 0, -786402, 536870912, 0, -786401, 536870912, 0, -786400, 536870912, 0, -786399, 536870912, 0, -655368, 536870912, 0, -655367, 536870912, 0, -655366, 536870912, 0, -655365, 536870912, 0, -655364, 536870912, 0, -655363, 536870912, 0, -655362, 536870912, 0, -655361, 536870912, 0, -720896, 536870912, 0, -720895, 536870912, 0, -720894, 536870912, 0, -720893, 536870912, 0, -720892, 536870912, 0, -720891, 536870912, 0, -720890, 536870912, 0, -720889, 536870912, 0, -720888, 536870912, 0, -720887, 536870912, 0, -720886, 536870912, 0, -720885, 536870912, 0, -720884, 536870912, 0, -720883, 536870912, 0, -720882, 536870912, 0, -720881, 536870912, 0, -720880, 536870912, 0, -720879, 536870912, 0, -720878, 536870912, 0, -720877, 536870912, 0, -720876, 536870912, 0, -720875, 536870912, 0, -720874, 536870912, 0, -720873, 536870912, 0, -720872, 536870912, 0, -720871, 536870912, 0, -720870, 536870912, 0, -720869, 536870912, 0, -720868, 536870912, 0, -720867, 536870912, 0, -720866, 536870912, 0, -720865, 536870912, 0, -720864, 536870912, 0, -720863, 536870912, 0, -589832, 536870912, 0, -589831, 536870912, 0, -589830, 536870912, 0, -589829, 536870912, 0, -589828, 536870912, 0, -589827, 536870912, 0, -589826, 536870912, 0, -589825, 536870912, 0, -655360, 536870912, 0, -655359, 536870912, 0, -655358, 536870912, 0, -655357, 536870912, 0, -655356, 536870912, 0, -655355, 536870912, 0, -655354, 536870912, 0, -655353, 536870912, 0, -655352, 536870912, 0, -655351, 536870912, 0, -524296, 536870912, 0, -524295, 536870912, 0, -524294, 536870912, 0, -524293, 536870912, 0, -524292, 536870912, 0, -524291, 536870912, 0, -524290, 536870912, 0, -524289, 536870912, 0, -589824, 536870912, 0, -589823, 536870912, 0, -589822, 536870912, 0, -589821, 536870912, 0, -589820, 536870912, 0, -589819, 536870912, 0, -589818, 536870912, 0, -458737, 536870916, 0, -458736, 536870912, 0, -458735, 536870912, 0, -458734, 536870912, 0, -458733, 536870912, 0, -458732, 536870912, 0, -458731, 536870912, 0, -458730, 536870912, 0, -458729, 536870912, 0, -458728, 536870912, 0, -458727, 536870912, 0, -458726, 536870912, 0, -458725, 536870912, 0, -458724, 536870912, 0, -458723, 536870912, 0, -458722, 536870912, 0, -458721, 536870912, 0, -458720, 536870912, 0, -458719, 536870912, 0, -393202, 536870916, 0, -393201, 536870912, 0, -393200, 536870912, 0, -393199, 536870912, 0, -393198, 536870912, 0, -393197, 536870912, 0, -393196, 536870912, 0, -393195, 536870912, 0, -393194, 536870912, 0, -393193, 536870912, 0, -393192, 536870912, 0, -393191, 536870912, 0, -393190, 536870912, 0, -393189, 536870912, 0, -393188, 536870912, 0, -393187, 536870912, 0, -393186, 536870912, 0, -393185, 536870912, 0, -393184, 536870912, 0, -393183, 536870912, 0, -327667, 536870916, 0, -327666, 536870912, 0, -327665, 536870912, 0, -327664, 536870912, 0, -327663, 536870912, 0, -327662, 536870912, 0, -327661, 536870912, 0, -327660, 536870912, 0, -327659, 536870912, 0, -327658, 536870912, 0, -327657, 536870912, 0, -327656, 536870912, 0, -327655, 536870912, 0, -327654, 536870912, 0, -327653, 536870912, 0, -327652, 536870912, 0, -327651, 536870912, 0, -327650, 536870912, 0, -327649, 536870912, 0, -327648, 536870912, 0, -327647, 536870912, 0, -262135, 536870916, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 536870912, 0, -262130, 536870912, 0, -262129, 536870912, 0, -262128, 536870912, 0, -262127, 536870912, 0, -262126, 536870912, 0, -262125, 536870912, 0, -196600, 536870916, 0, -196599, 536870912, 0, -196598, 536870912, 0, -196597, 536870912, 0, -196596, 536870912, 0, -196595, 536870912, 0, -196594, 536870912, 0, -196593, 536870912, 0, -196592, 536870912, 0, -196591, 536870912, 0, -196590, 536870912, 0, -196589, 536870912, 0, -65542, 1, 0, -65541, 536870913, 0, -131065, 536870916, 0, -131064, 536870912, 0, -131063, 536870912, 0, -131062, 536870912, 0, -131061, 536870912, 0, -131060, 536870912, 0, -131059, 536870912, 0, -131058, 536870912, 0, -131057, 536870912, 0, -131056, 536870912, 0, -131055, 536870912, 0, -131054, 536870912, 0, -131053, 536870912, 0, -8, 0, 0, -7, 0, 0, -6, 536870912, 0, -5, 536870912, 0, -4, 536870912, 0, -3, 536870912, 0, -2, 536870912, 0, -1, 536870912, 0, -65536, 536870912, 0, -65535, 536870912, 0, -65534, 536870912, 0, -65533, 536870912, 0, -65532, 536870912, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 536870912, 0, -65525, 536870912, 0, -65524, 536870912, 0, -65523, 536870912, 0, -65522, 536870912, 0, -65521, 536870912, 0, -65520, 536870912, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 536870912, 0, 11, 536870912, 0, 12, 536870912, 0, 13, 536870912, 0, 14, 536870912, 0, 15, 536870912, 0, 16, 536870912, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 536870912, 0, 65547, 536870912, 0, 65548, 536870912, 0, 65549, 536870912, 0, 65550, 536870912, 0, 65551, 536870912, 0, 65552, 536870912, 0 )
_sections_unfolded = [ "Cell" ]

[node name="NPCs" type="Node2D" parent="." index="3"]

editor/display_folded = true

[node name="NPC_1" parent="NPCs" index="0" groups=[
"Interactable",
] instance=ExtResource( 4 )]

position = Vector2( 500, -250 )
head_texture = ExtResource( 5 )
body_texture = ExtResource( 6 )
dialogue = [ "Ew#...@ Get away from me you stinky piece of garbage." ]
serial_thoughts = [ "1111", "2222", "3333", "4", "5" ]
npc_name = "hi"

[node name="Interactables" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="Interactable_1" parent="Interactables" index="0" groups=[
"Interactable",
] instance=ExtResource( 7 )]

position = Vector2( -1030, -480 )
_sections_unfolded = [ "Transform", "Visibility" ]
dialogue = [ "This is a plant.#@ You idiot.#@", "What are you doing?#@ Trying to play detective or something?#@" ]

[node name="Player" type="KinematicBody2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 0, -300 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Sprites" type="Node2D" parent="Player" index="0"]

editor/display_folded = true
_sections_unfolded = [ "Material" ]

[node name="HeadSprite" type="Sprite" parent="Player/Sprites" index="0"]

position = Vector2( 0, -140 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="BodySprite" type="Sprite" parent="Player/Sprites" index="1"]

position = Vector2( 0, -26.2891 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="HandSprite" type="Sprite" parent="Player/Sprites" index="2"]

position = Vector2( 0, -70 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="1"]

position = Vector2( 0, -70 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="2"]

offset = Vector2( 0, -200 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player" index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/JumpEnd = SubResource( 3 )
anims/JumpInit = SubResource( 4 )
anims/Walk = SubResource( 5 )
blend_times = [  ]

[node name="Cursor" type="Sprite" parent="." index="6"]

editor/display_folded = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
script = ExtResource( 13 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="Cursor" index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D" index="0"]

shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Flash = SubResource( 7 )
blend_times = [  ]

[node name="HUD" type="CanvasLayer" parent="." index="7"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 16 )

[node name="UIBox" type="NinePatchRect" parent="HUD" index="0"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 411.0
margin_right = 974.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
texture = ExtResource( 17 )
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin" ]

[node name="Dialogue" type="Label" parent="HUD/UIBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Inventory" type="Control" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 19 )
_sections_unfolded = [ "Rect" ]

[node name="BackPanel" type="NinePatchRect" parent="HUD/Inventory" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 1000.0
margin_right = -20.0
margin_bottom = 960.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
texture = ExtResource( 17 )
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10
_sections_unfolded = [ "Rect" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Inventory" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ShowInvent = SubResource( 9 )
blend_times = [  ]


